<resources>
    <string name="app_name">FIUBA Inscripciones</string>
    <string name="catedra_label">Cátedra:</string>
    <string name="cupo_label">Cupo:</string>
    <string name="horarios_label">Horarios:</string>
    <string name="sede_label">Sede:</string>
    <string name="sede_las_heras">Las Heras</string>
    <string name="inscribirse_btn_text">Inscribirse</string>
    <string name="sede_pc">Paseo Colón</string>
    <string name="time_curso">%02d:%02d - %02d:%02d</string>
    <string name="practio_obligatory">Práctica obligatoria</string>
    <string name="practio">Práctica</string>
    <string name="teorico_obligatory">Teórica Obligatoria</string>
    <string name="teorico">Teórica</string>
    <string name="teorico_practio_obligatory">Teorico Práctico Obligatorio</string>
    <string name="teorico_practio">Teórico Práctico</string>
    <string name="aula_title">Aula :</string>
    <string name="departments_title">Departamentos</string>
    <string name="proximamente">Próximamente</string>
    <string name="materias">Materias</string>
    <string name="carreras">Carreras</string>
    <string name="cursos">Cursos</string>
    <string name="fiuba_inscripciones">FIUBA Inscripciones</string>
    <string name="connectivityFailed">No se pudieron cargar los datos por que no hubo conexión</string>
    <string name="loading">Cargando...</string>
    <string name="failed_login">Email o contraseña inválida</string>
    <string name="failed_enrolment">Ya estás inscripto en este curso</string>
    <string name="success_enrolment">Se inscribió como %s correctamente</string>
    <string name="wait_till_subscription_ends">Hay una inscripción en curso</string>
    <string name="failed_enrolment_error">Error: No se realizo la inscripción</string>
    <string name="no_hay_horarios">No hay horarios disponibles</string>
    <string name="ingresar">Ingresar</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Email</string>
    <string name="empty_user_name">Ingrese un email válido</string>
    <string name="valid_password">Ingrese una contraseña</string>
    <string name="wait_for_login">El login se está realizando</string>
    <string name="inscripto">Inscripto</string>
    <string name="no_hay_cursos">No hay cursos disponibles</string>
    <string name="no_hay_materias">No hay materias disponibles</string>
    <string name="hora_label">Hora:</string>
    <string name="my_finals">Mis Finales</string>
    <string name="unsubribed_final_success">Se desinscribió correctamente</string>
    <string name="regular">Regular</string>
    <string name="libre">Libre</string>
    <string name="log_out_title">Cerrar sesión</string>
    <string name="log_out_message">¿Está seguro que desea cerrar sesión?</string>
    <string name="log_out_cancel">No</string>
    <string name="log_out_button">Sí</string>
    <string name="unsubscribe">Desinscribirse</string>
    <string name="finals_title">Exámenes Finales</string>
    <string name="condicion_label">Condición:</string>
    <string name="fecha_label">Fecha:</string>
    <string name="error_while_loading_finals">No se pudieron cargar los finales</string>
    <string name="error_when_unsubscribing">No se pudo realizar la desinscripción</string>
    <string name="no_hay_finales">No se encontraron finales</string>
    <string name="error_when_subscribing">No se pudo realizar la inscripción</string>
    <string name="subscribed_final_success">Se realizó la subscripción correctamente</string>
    <string name="see_finals">Ver Finales</string>
    <string name="my_courses">Mis Cursos</string>
    <string name="error_while_loading_my_courses">Los cursos no se puedieron cargar</string>
    <string name="nota_label">Nota:</string>
    <string name="disapproved">Desaprobado</string>
    <string name="approved">Aprobado(%d)</string>
    <string name="approved_subjects">Materias Aprobadas</string>
    <string name="error_approved_subjects">No se pudieron obtener las materia aprobadas por un error</string>
    <string name="menu">Menú</string>
    <string name="no_approved_subjects">Todavía no tiene materias aprobadas</string>
    <string name="error_unsubscribe_course_out_of_period">No puede desinscribirse por que no esta en la primer semana de cursada</string>
    <string name="unsubscribed_course_success">Se desinscribio correctamente</string>
    <string name="error_when_loading_finals_period">No se pudo verificar el periodo de finales</string>
    <string name="cant_subscribe_final">No puede inscribirse a este final</string>
    <string name="all_departments">Todos los departamentos</string>
    <string name="default_notification_channel_id">com.tdp.setsubi.android_tp_sistema_de_inscripcion.noticationChannel</string>
    <string name="no_notifications">No tiene notificaciones</string>
    <string name="notifications">Notificaciones</string>
    <string name="subscribe_regular">Inscribirse Regular</string>
    <string name="subscribe_libre">Inscribirse Libre</string>
    <string name="unsubscribe_libre">Desinscribirse Libre</string>
    <string name="unsubscribe_regular">Desinscribirse Regular</string>
    <string name="poll">Encuesta</string>
    <string name="poll_not_sent">No se pudo enviar la encuesta</string>
    <string name="complete_text">Debe dejar un comentario</string>
    <string name="poll_success">Se envió la encuesta correctamente</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="my_data">Mis Datos</string>
    <string name="empty_surname_error">Ingrese un apellido</string>
    <string name="empty_name_error">Ingrese un nombre</string>
    <string name="succes_edition">Se editaron los datos exitosamente</string>
    <string name="edition_failed">No se pudieron editar los datos</string>
    <string name="gallery_disabled">No se puede acceder a la galería</string>


</resources>
